--- a/Spanish.lng
+++ b/Spanish.lng
@@ -1,5 +1,5 @@
 ﻿|~LANGUAGENAME||Spanish (Español para España y Latinoamérica)|
-|~LANGUAGEVERSION||1.36|
+|~LANGUAGEVERSION||1.37|
 |~LANGUAGEAUTHOR||Marcel Trujillo|
 |~LANGUAGEAUTHOREMAIL||badseed@users.sourceforge.net|
 |~LANGISO6391CODE||es|
@@ -72,6 +72,7 @@
 |&Save Attached File To...||Guardar archi&vo adjunto en...|
 |&Save||&Guardar|
 |&Select All||&Seleccionar todos|
+|&Show dialog for collecting user input as additional entropy||Mo&strar ventana de diálogo para recolectar información ingresada por el usuario como entropía adicional|
 |&Sort Group List||&Ordenar lista de grupos|
 |&TAN Wizard...||Asistente de &TAN...|
 |&Title||&Título|
@@ -180,7 +181,6 @@
 |Clipboard cleared.||Portapapeles borrado.|
 |Close button [X] minimizes the main window instead of terminating the application||Botón de cerrar [X] minimiza la ventana principal en vez de terminar la aplicación|
 |Code&Wallet TXT File...||Archivo TXT Code&Wallet...|
-|Collect additional &entropy||Recolectar &entropía adicional|
 |Command line argument||Argumento para la línea de comandos|
 |Component||Componente|
 |Connect failed, cannot check for updates.||Falló la conexión, no se pudo comprobar si había actualizaciones.|
@@ -223,6 +223,7 @@
 |Discard all changes made to the database and lock the KeePass workspace.||Descartar todas las modificaciones realizadas a la base de datos y bloquear el área de trabajo de KeePass.|
 |&Discard changes||&Descartar modificaciones|
 |Display images on buttons||Mostrar imágenes en los botones|
+|Do not store data in the Windows clipboard history and the cloud clipboard||No almacenar información en el historial del portapapeles de Windows ni el portapapeles en la nube|
 |Do you grant the application access to your KeePass database?||¿Le concede usted a la aplicación acceso a su base de datos de KeePass?|
 |Do you want to open the application directory (in order to move or delete language files)?||¿Desea abrir la carpeta de la aplicación? (para mover o borrar estos archivos de idioma)|
 |Do you want to overwrite it?||¿Desea sobreescribirlo?|
@@ -572,6 +573,7 @@
 |The file will not be closed.||El archivo no será cerrado.|
 |The file you are trying to open is locked, i.e. someone else has currently opened the file and is editing it.||El archivo que está tratando de abrir está bloqueado, tal vez alguien más haya abierto el archivo y se encuentre editándolo.|
 |The following application requests access to your currently opened KeePass database:||La siguiente aplicación solicita acceso a su base de datos de KeePass actualmente abierta:|
+|The following options apply to entry clipboard commands in the main window (like 'Copy User Name' and 'Copy Password').||Las siguientes opciones aplican a comandos relacionados con el portapapeles en la ventana principal (como 'Copiar usuario' y 'Copiar contraseña').|
 |The following self-tests failed:||Las siguientes pruebas fallaron:|
 |The generated password contains a placeholder. When using this password (e.g. by copying it to the clipboard or auto-typing it), the placeholder will be replaced, i.e. effectively a different password might be used.||La contraseña generada contiene un marcador de posición. Al usar esta contraseña (por ejemplo, al copiarla al portapapeles o escribirla automáticamente), el marcador de posición será sustituido; en otras palabras, una contraseña distinta sería utilizada.|
 |The group you selected cannot store entries. Please select a different group.||El grupo que seleccionó no pueda almacenar entradas. Por favor seleccione otro grupo.|
