--- a/Spanish.lng
+++ b/Spanish.lng
@@ -1,5 +1,5 @@
 ﻿|~LANGUAGENAME||Spanish (Español para España y Latinoamérica)|
-|~LANGUAGEVERSION||1.37|
+|~LANGUAGEVERSION||1.35|
 |~LANGUAGEAUTHOR||Marcel Trujillo|
 |~LANGUAGEAUTHOREMAIL||badseed@users.sourceforge.net|
 |~LANGISO6391CODE||es|
@@ -72,7 +72,6 @@
 |&Save Attached File To...||Guardar archi&vo adjunto en...|
 |&Save||&Guardar|
 |&Select All||&Seleccionar todos|
-|&Show dialog for collecting user input as additional entropy||Mo&strar ventana de diálogo para recolectar información ingresada por el usuario como entropía adicional|
 |&Sort Group List||&Ordenar lista de grupos|
 |&TAN Wizard...||Asistente de &TAN...|
 |&Title||&Título|
@@ -181,6 +180,7 @@
 |Clipboard cleared.||Portapapeles borrado.|
 |Close button [X] minimizes the main window instead of terminating the application||Botón de cerrar [X] minimiza la ventana principal en vez de terminar la aplicación|
 |Code&Wallet TXT File...||Archivo TXT Code&Wallet...|
+|Collect additional &entropy||Recolectar &entropía adicional|
 |Command line argument||Argumento para la línea de comandos|
 |Component||Componente|
 |Connect failed, cannot check for updates.||Falló la conexión, no se pudo comprobar si había actualizaciones.|
@@ -223,7 +223,6 @@
 |Discard all changes made to the database and lock the KeePass workspace.||Descartar todas las modificaciones realizadas a la base de datos y bloquear el área de trabajo de KeePass.|
 |&Discard changes||&Descartar modificaciones|
 |Display images on buttons||Mostrar imágenes en los botones|
-|Do not store data in the Windows clipboard history and the cloud clipboard||No almacenar información en el historial del portapapeles de Windows ni el portapapeles en la nube|
 |Do you grant the application access to your KeePass database?||¿Le concede usted a la aplicación acceso a su base de datos de KeePass?|
 |Do you want to open the application directory (in order to move or delete language files)?||¿Desea abrir la carpeta de la aplicación? (para mover o borrar estos archivos de idioma)|
 |Do you want to overwrite it?||¿Desea sobreescribirlo?|
@@ -235,7 +234,7 @@
 |E&xit||S&alir|
 |Each character must occur at most once||Cada caracter debe estar presente a lo sumo una vez|
 |Ed&it Group...||Ed&itar grupo...|
-|Edit Entry||Editar gntrada|
+|Edit Entry||Editar entrada|
 |Edit Group||Editar grupo|
 |EITHER enter a master password OR select a key file.||Introduzca una contraseña maestra O seleccione un archivo de clave.|
 |eMail||eMail|
@@ -372,7 +371,7 @@
 |Limit to single instance||Permitir una única instancia|
 |Load the existing key file and use it as key for the current database. The key file will not be modified.||Cargar el archivo de clave existente y usarlo como clave para la base de datos actual. El archivo de clave no será modificado.|
 |Loading error||Error al cargar|
-|Loading language files directly from the application directory is not supported. Language files should instead be stored in the 'Languages' folder of the application directory.||Cargar archivos de idioma directamente desde el directorio de la aplicación ya no es posible. Los archivos de idioma deben guardarse en la carpeta 'Languages' ubicada en el directorio de la aplicación.|
+|Loading language files directly from the application directory is not supported. Language files should instead be stored in the 'Languages' folder of the application directory.||Cargar archivos de idioma directamente desde el directorio de la aplicación no es posible. Los archivos de idioma deben guardarse en la carpeta 'Languages' ubicada en el directorio de la aplicación.|
 |Local help file||Archivo de ayuda local|
 |Lock workspace after the following idle time (seconds):||Bloquear el área de trabajo después del siguiente tiempo de inactividad (segundos):|
 |Lock workspace when locking Windows, switching user or sleeping||Bloquear el área de trabajo al bloquear Windows, cambiar de usuario o hibernar|
@@ -506,7 +505,6 @@
 |Save||Guardar|
 |Se&lect All||Se&leccionar todo|
 |Search in||Buscar en|
-|Search for passwords in quick searches||Buscar contraseñas en las búsquedas rápidas|
 |Search Results||Resultados de la búsqueda|
 |Search...||Buscar...|
 |Security||Seguridad|
@@ -573,7 +571,6 @@
 |The file will not be closed.||El archivo no será cerrado.|
 |The file you are trying to open is locked, i.e. someone else has currently opened the file and is editing it.||El archivo que está tratando de abrir está bloqueado, tal vez alguien más haya abierto el archivo y se encuentre editándolo.|
 |The following application requests access to your currently opened KeePass database:||La siguiente aplicación solicita acceso a su base de datos de KeePass actualmente abierta:|
-|The following options apply to entry clipboard commands in the main window (like 'Copy User Name' and 'Copy Password').||Las siguientes opciones aplican a comandos relacionados con el portapapeles en la ventana principal (como 'Copiar usuario' y 'Copiar contraseña').|
 |The following self-tests failed:||Las siguientes pruebas fallaron:|
 |The generated password contains a placeholder. When using this password (e.g. by copying it to the clipboard or auto-typing it), the placeholder will be replaced, i.e. effectively a different password might be used.||La contraseña generada contiene un marcador de posición. Al usar esta contraseña (por ejemplo, al copiarla al portapapeles o escribirla automáticamente), el marcador de posición será sustituido; en otras palabras, una contraseña distinta sería utilizada.|
 |The group you selected cannot store entries. Please select a different group.||El grupo que seleccionó no pueda almacenar entradas. Por favor seleccione otro grupo.|
